# AMPM-AIOPS

./: .REPO_CATEGORY  .dockerignore  .env.example  .gitignore  AGENTS.md  AMPM_AIOPS_黑曜_規劃狀況與公司架構.md  ARCHITECTURE_DIRECTION.md  ARCHITECTURE_FULL.md  ARCHITECTURE_KERNEL.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_REVISION.md  BLUEPRINT.md  BUSINESS_MODEL.md  COMMERCE.md  COPYRIGHT  Dockerfile  LICENSE  OPS  ORGAN_RESPONSIBILITY.md  PLAN.md  PLUGIN_SECURITY.md  PRICING.md  PUBLIC_API.md  README.md  README.zh.md  README_EN.md  ROADMAP.md  SPLIT_REPORT.md  STORY.md  STORY_EN.md  TRADEMARK  UPDATES_2026-05-26.md  ai_brain_overview.txt  ai_hot_paths.md  ai_hot_paths.txt  ampm-core-install.sh  bot.py  channel_bridge.py  connect.py  daemon.sh  (+22 more)
AI-BOS-Core/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
AI-BOS-Core/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
AI-BOS-Core/.github/workflows/: ci.yml
AI-BOS-Core/ai_bos_core/: __init__.py  __main__.py  demo.py
AI-BOS-Core/core/: bos_config.py  bos_context.py  bos_kernel.py
AI-BOS-Core/docs/: architecture.md  capabilities.md  executor.md  lifecycle.md  organs.md
AI-BOS-Core/examples/: README.md  basic_agent.py  custom_organ.py  memory_demo.py  pluggable_memory.py
AI-BOS-Core/executor/: evolve_stub.py  orchestrator.py  reflect.py  repair_stub.py  tool_executor.py
AI-BOS-Core/lifecycle/: baseline_test.py  boot.py  health_loop.py  shutdown.py
AI-BOS-Core/organs/brain/: brain.py
AI-BOS-Core/tests/: test_core.py
dashboard/: app.py  (+1 more)
(+449 files in other folders)
