[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-bos-core"
version = "1.0.0"
description = "AI Biological Operating System — Open Source Core"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0 + Additional Restrictions"}
authors = [{name = "AMPM Labs", email = "chainuncel0712@gmail.com"}]

[project.scripts]
ai-bos-core = "ai_bos_core.demo:main"
